# SocialScour

./: .gitignore  Scour-Sentiments.ps1  TODO-tomorrow.md  aider-test.ps1  build-with-ollama.py  execution-observations.md  goose.ps1  pyproject.toml  v1.spec
aider/reddit_scraper/: __init__.py  cli.py
claude/reddit_research/: __init__.py  cache.py  discover.py  fetch.py  llm.py  mcp_server.py  rank.py  render.py  reputation.py
claude/tests/: test_cache.py  test_fetch.py  test_filter.py  test_rank.py  test_render_and_reputation.py  test_smoke_offline.py  test_smoke_online.py
claude/tests/fixtures/: comments_r_test.json  listing_r_test.json
dev-testing/: aider-test-spec.md  aider.ps1  build-prompt.md  opencode.ps1
dev-testing/aider/: README.md  pyproject.toml
dev-testing/aider-test/: roman.py  test_roman.py
dev-testing/aider/reddit_scraper/: fetch.py  mcp_server.py  render.py  schema.py  summarize.py
dev-testing/claude/: .gitignore  README.md  pyproject.toml
dev-testing/claude/cache/: reputation.json
dev-testing/claude/reddit_research/: cli.py  filter.py  prompts.py  schema.py  summarize.py
dev-testing/claude/tests/fixtures/: subreddit_search.json
docs/superpowers/plans/: 2026-05-11-social-scraper-v2.md
docs/superpowers/specs/: 2026-05-11-social-scraper-v2-design.md
social_scraper/: __init__.py  cli.py  mcp_server.py
social_scraper/core/: schema.py
social_scraper/core/agent/: discover.py
social_scraper/core/llm/: claude.py  ollama.py
social_scraper/core/pipeline/: ask.py  discover_subs.py  narrate.py  prompts.py  rank.py  summarize.py
social_scraper/core/sources/: google_trends.py  hn.py  indiehackers.py  reddit.py
social_scraper/core/store/: cache.py  reputation.py  run.py  timeline.py
tests/: conftest.py
tests/component/: test_agent_discover.py  test_llm_claude.py  test_llm_ollama.py  test_pipeline_discover_subs.py  test_pipeline_narrate.py  test_pipeline_rank.py  test_pipeline_summarize.py  test_schema.py  test_sources_google_trends.py  test_sources_hn.py  test_sources_indiehackers.py  test_sources_reddit.py  test_store_cache.py  test_store_reputation.py  test_store_run.py  test_store_timeline.py
tests/component/fixtures/hn/: algolia_search.json
tests/component/fixtures/indiehackers/: listing.html
tests/component/fixtures/reddit/: subreddit_about.json
tests/e2e/: test_real_ask.py
tests/workflow/: test_agent_discover_loop.py  test_cli.py  test_mcp_server.py  test_pipeline_ask.py
