[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reddit-scraper"
version = "0.1.0"
description = "A Reddit scraper and summarizer"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "httpx[http2]>=0.27",
    "pydantic>=2.7",
    "tenacity>=8.3",
    "openai>=1.40",
    "mcp>=1.0",
    "typer>=0.12",
]

[project.scripts]
reddit-scrape = "reddit_scraper.cli:app"
reddit-scrape-mcp = "reddit_scraper.mcp_server:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
